--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,16 @@ a:hover {
     opacity: .5;
   }
 }
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.rotating-image {
+  animation: rotate 9s linear infinite;
+}
